# konvex

./: .gitignore  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  org.kde.konvex.desktop
.reuse/: dep5
po/ar/: konvex.po
po/ca/: konvex.po
po/ca@valencia/: konvex.po
po/cs/: konvex.po
po/de/: konvex.po
po/eo/: konvex.po
po/es/: konvex.po
po/eu/: konvex.po
po/fi/: konvex.po
po/fr/: konvex.po
po/ga/: konvex.po
po/gl/: konvex.po
po/he/: konvex.po
po/ia/: konvex.po
po/it/: konvex.po
po/ka/: konvex.po
po/ko/: konvex.po
po/lt/: konvex.po
po/lv/: konvex.po
po/nl/: konvex.po
po/nn/: konvex.po
po/pl/: konvex.po
po/pt_BR/: konvex.po
po/sa/: konvex.po
po/sk/: konvex.po
po/sl/: konvex.po
po/sv/: konvex.po
po/tr/: konvex.po
po/ug/: konvex.po
po/uk/: konvex.po
po/zh_CN/: konvex.po
po/zh_TW/: konvex.po
src/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  qml.qrc
src/core/: CMakeLists.txt  konvexplugininterface.cpp  konvexplugininterface.h
src/plugins/: CMakeLists.txt
src/plugins/assimp/: CMakeLists.txt  assimpplugin.cpp  assimpplugin.json  assimpplugin.json.license
src/ui/: Main.qml  SettingsPage.qml  main.qml
